ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: hackathon-api2
  labels:
    app: api
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    kubernetes.io/ingress.global-static-ip-name: 35.187.19.246
    kubernetes.io/ingress.class: "nginx"
spec:
  backend: 
    serviceName: hackathon-api2-svc
    servicePort: 80
